# cpp-pish-23-8

./: README.md
lab_1/: Department.cpp  Department.h  Employee.h  README.md  main.cpp
lab_1_max/: CMakeLists.txt  README.md  RandomText.txt  windows_build_test.bat
lab_1_max/src/: main.cpp  word_count.cpp  word_count.h
lab_1_min/: .gitignore  CMakeLists.txt  README.md
lab_1_min/src/: Employee.cpp
lab_2_max/: README.md  vscode_run_config.yml
lab_2_max/lib/: number.cpp
lab_3_max/: README.md  launch_main.bat
lab_4_max/: launch_main.bat
lab_5_max/example/: config.omfl
lab_5_max/lib/: beauty.cpp  beauty.h  parser.cpp  parser.h
lab_6_max/: launch_main.bat
lab_6_max/lib/: MP3Parser.cpp
